[package]
name = "ffmpeg_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = "0.13"
regex = "1.11"
axum = "0.8"
clap =  { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
anyhow = "1.0"
ctrlc = "3.4"
