[package]
name = "ffmpeg_exporter"
authors = ["Marco Cadetg <cadetg@gmail.com>"]
description = "A Prometheus exporter for FFmpeg metrics"
version = "1.0.0"
edition = "2021"

[dependencies]
prometheus = "0.13"
regex = "1.11"
axum = "0.8"
clap =  { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
anyhow = "1.0"
ctrlc = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processenv", "consoleapi", "winbase", "errhandlingapi", "handleapi"] }

[features]
default = []
windows = []
